# axum-conf-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  audit.toml  clippy.toml  deny.toml
.claude/commands/git/: commit.md
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: middleware_overhead.rs
config/: test.toml
docs/: architecture.md  benchmarking.md  error-handling.md  getting-started.md  security-audit.md  testing.md  troubleshooting.md
docs/configuration/: environment-vars.md  overview.md  toml-reference.md
docs/diagrams/: structurizr-Components.puml  structurizr-Containers.puml  structurizr-SystemContext.puml  workspace.dsl
docs/features/: basic-auth.md  circuit-breaker.md  deduplication.md  keycloak.md  openapi.md  opentelemetry.md  postgres.md  role-based-access.md  rustls.md  sessions.md  shutdown-notifications.md  static-files.md
docs/kubernetes/: deployment.md  graceful-shutdown.md  health-checks.md
docs/middleware/: features.md  observability.md  overview.md  performance.md  security.md
docs/plans/: 2026-03-03-proxy-oidc-design.md  2026-03-03-proxy-oidc-plan.md
examples/: custom_histogram.rs  hello_world.rs  json_api.rs  readiness_check.rs  with_middleware.rs  with_state.rs
src/: error.rs  lib.rs  openapi.rs  resilience.rs  utils.rs
src/circuit_breaker/: database.rs  error.rs  http_client.rs  mod.rs  registry.rs  state.rs
src/config/: database.rs  logging.rs  mod.rs  opentelemetry.rs
src/config/http/: basic_auth.rs  circuit_breaker.rs  cors.rs  dedup.rs  identity.rs  metrics.rs  middleware.rs  mod.rs  oidc.rs  proxy_oidc.rs  role_extractors.rs  staticdir.rs
src/fluent/: auth.rs  basic_auth.rs  browser_redirect.rs  builder.rs  control.rs  dedup.rs  features.rs  mod.rs  observability.rs  oidc_bearer.rs  oidc_flow.rs  proxy_oidc.rs  readiness.rs  request.rs  router.rs  session_store.rs  shutdown.rs  user_span.rs
src/fluent/tests/: basic.rs  integration.rs  mod.rs
src/fluent/tests/middleware/: api_versioning.rs  catch_panic.rs  concurrency_limit.rs  config.rs  cors.rs  deduplication.rs  helmet.rs  interactions.rs  liveness_readiness.rs  max_payload_size.rs  metrics.rs  mod.rs  opentelemetry.rs  ordering.rs  path_normalization.rs  readiness.rs  request_id.rs  sensitive_headers.rs  sessions.rs  static_files.rs  timeout.rs
tests/: README.md  basic_auth_tests.rs  keycloak.rs  metrics_buckets_tests.rs  oidc_code_flow_tests.rs  oidc_discovery_tests.rs  oidc_tests.rs  proxy_oidc_tests.rs  rate_limit_tests.rs  session_store_tests.rs
tests/common/: mod.rs
