[package]
name = "axum-conf"
version = "0.7.2"
edition = "2024"
authors = ["Eric Methot <em@ericmethot.com>"]
description = "A library to simplify the use of Axum, Tokio and Postgres together using configuration. It comes with batteries included and many features can be feature activated."
keywords = ["axum","postgres","configuration","tokio"]
categories = ["development-tools","rust-patterns","web-programming"]
repository = "https://github.com/macprog-guy/axum-conf-rs.git"
license = "MIT"
rust-version = "1.92"

# `humantime-serde` is used only through `#[serde(with = "humantime_serde")]`
# attributes, which cargo-machete cannot see, so it reports a false positive.
[package.metadata.cargo-machete]
ignored = ["humantime-serde", "reqwest-system-roots"]

# Build docs.rs with every feature enabled (default features are empty, so the
# feature-gated middleware would otherwise be invisible) and pass `--cfg docsrs`
# so `#[doc(cfg(...))]` feature badges render. See `#![cfg_attr(docsrs, ...)]` in
# src/lib.rs.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
# Fat LTO requires a single codegen unit to be effective; `codegen-units = 4`
# partially defeats it. Use 1 for a fully-optimized release.
codegen-units = 1
strip = true
lto = true


[dependencies]
# Core dependencies (always required)
axum = { version = "0.8", features = ["default", "http2"] }
byte-unit = { version = "5.2", features = ["serde"] }
http = "1.4"
humantime-serde = "1.1"
# CIDR matching for the trusted-proxy allow-list (proxy-OIDC header gating).
ipnet = { version = "2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
subtle = "2.6"
thiserror = "2.0"
tokio = { version = "1.50", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = { version = "0.9", features = ["preserve_order"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "ansi"] }
url = "2.5"
uuid = { version = "1", features = ["v7", "serde"] }
zeroize = { version = "1.8", features = ["derive"] }

# tower-http base features (always needed for catch-panic, trace, timeout, request-id, fs)
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "timeout", "request-id", "fs", "catch-panic", "set-header"] }

# Feature-gated dependencies - High Impact
axum-helmet = { version = "1", optional = true }
helmet-core = { version = "1", optional = true }
axum-prometheus = { version = "0.10", optional = true }
# `MetricKindMask` (for `idle_timeout`) is not re-exported by axum-prometheus /
# metrics-exporter-prometheus, so it is declared directly. `^0.20` unifies with
# the version metrics-exporter-prometheus pulls in, keeping the type identical.
# `default-features = false`: the type is ungated, and the exporter already
# enables the features it needs, so we add no extra (e.g. radix_trie) crates.
metrics-util = { version = "0.20", optional = true, default-features = false }
tower_governor = { version = "0.8", optional = true }
dashmap = { version = "6.1.0", optional = true }

# Required for config parsing (handlebars substitution)
regex = "1.12"

# Existing optional dependencies
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"], optional = true }
rustls = { version = "0.23", features = ["ring"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring"], optional = true }
sqlx-postgres = { version = "0.8", features = ["rust_decimal", "time", "uuid", "json", "offline"], optional = true }
tower-sessions = { version = "0.15", features = ["axum-core", "memory-store"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
opentelemetry = { version = "0.31", optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"], optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
base64 = { version = "0.22", optional = true }
openidconnect = { version = "4.0", default-features = false, features = ["reqwest", "rustls-tls"], optional = true }
# Feature-unification-only dependency (never imported in code): enables
# reqwest's `rustls-tls-native-roots` on the same reqwest 0.12 build that
# openidconnect/oauth2 use, so the OIDC discovery + JWKS client trusts the
# system CA store (SSL_CERT_FILE, /etc/ssl/certs/ca-certificates.crt) in
# ADDITION to the bundled webpki roots. Renamed key: a `reqwest 0.13`
# dev-dependency already exists and must stay independent.
reqwest-system-roots = { package = "reqwest", version = "0.12", default-features = false, features = ["rustls-tls-native-roots"], optional = true }
serde_json = { version = "1.0", optional = true }

# OpenAPI documentation
utoipa = { version = "5", optional = true }
utoipa-scalar = { version = "0.3", features = ["axum"], optional = true }
# Session store backends are hand-rolled against tower-sessions 0.15's
# SessionStore trait (the official store crates pin older, incompatible cores).
async-trait = { version = "0.1", optional = true }
rmp-serde = { version = "1.3", optional = true }
fred = { version = "10.1", optional = true }
# HMAC-SHA256 tagging of externally-stored session records (tamper detection).
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
keycloak = "26.5"
# Used by the `custom_histogram` example and `metrics_buckets_tests` to record a
# `metrics::histogram!`. Unifies with the `metrics` facade axum-prometheus pulls
# in, so recordings reach the recorder axum-conf installs.
metrics = "0.24"
# `test-util` (not in tokio's `full`) enables `#[tokio::test(start_paused = true)]`
# for deterministic virtual-time tests.
tokio = { version = "1.50", features = ["test-util"] }
proptest = "1.9.0"
reqwest = { version = "0.13", features = ["cookies"] }
testcontainers = "0.27"
testcontainers-modules = {version="0.15", features = ["postgres"]}
tower-sessions = { version = "0.15", features = ["axum-core"] }
tracing-test = "0.2.5"

[[bench]]
name = "middleware_overhead"
harness = false

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "with_state"
path = "examples/with_state.rs"

[[example]]
name = "readiness_check"
path = "examples/readiness_check.rs"

[[example]]
name = "json_api"
path = "examples/json_api.rs"

[[example]]
name = "with_middleware"
path = "examples/with_middleware.rs"
required-features = ["cors", "compression", "rate-limiting"]

[[example]]
name = "custom_histogram"
path = "examples/custom_histogram.rs"
required-features = ["metrics"]

[features]
default = []

# Full feature set for backwards compatibility
full = [
    "metrics",
    "rate-limiting",
    "security-headers",
    "deduplication",
    "circuit-breaker",
    "compression",
    "cors",
    "api-versioning",
    "concurrency-limit",
    "path-normalization",
    "sensitive-headers",
    "payload-limit",
    "postgres",
    "keycloak",
    "opentelemetry",
    "basic-auth",
    "openapi",
    "session-postgres",
    "session-redis",
]

# Common production setup
production = [
    "metrics",
    "rate-limiting",
    "security-headers",
    "compression",
    "cors",
]

# Existing features
postgres = ["rustls", "dep:sqlx", "dep:sqlx-postgres"]
rustls = ["dep:rustls"]
keycloak = [
    "session",
    "dep:jsonwebtoken",
    "dep:openidconnect",
    "dep:serde_json",
    "dep:base64",
    "dep:reqwest-system-roots",
]
session = ["dep:tower-sessions"]
opentelemetry = [
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
]
basic-auth = ["dep:base64"]
openapi = ["dep:utoipa", "dep:utoipa-scalar", "dep:serde_json"]

# New middleware features - High Impact
metrics = ["dep:axum-prometheus", "dep:metrics-util"]
rate-limiting = ["dep:tower_governor"]
security-headers = ["dep:axum-helmet", "dep:helmet-core"]
deduplication = ["dep:dashmap"]
circuit-breaker = ["dep:dashmap"]

# New middleware features - Medium Impact
compression = ["tower-http/compression-full", "tower-http/decompression-full"]
cors = ["tower-http/cors"]
api-versioning = []

# New middleware features - Low Impact
concurrency-limit = ["tower/limit"]
path-normalization = ["tower-http/normalize-path"]
sensitive-headers = ["tower-http/sensitive-headers"]
payload-limit = ["tower-http/limit"]

# Session store backends (each implies `session`).
session-postgres = ["session", "postgres", "dep:async-trait", "dep:rmp-serde", "dep:hmac", "dep:sha2"]
session-redis = ["session", "dep:async-trait", "dep:rmp-serde", "dep:fred", "dep:hmac", "dep:sha2"]
